# isometric-city

./: .gitignore  README.md  eslint.config.mjs  gt-lock.json  gt.config.json  next.config.js  package-lock.json  package.json
desktop-app/: .gitignore  index.html  package-lock.json  package.json
desktop-app/src/: App.tsx  index.css  styles.css  types.ts
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/icons/: icon.icns
desktop-app/src/components/: Sidebar.tsx  SplitPane.tsx
docs/sprite-audit/: SPRITE_AUDIT.md
public/_gt/: de.json  es.json  fr.json  it.json  ja.json  pt-BR.json  tr.json  zh.json
scripts/: boost-ai.sh  crop-coaster-assets.mjs  extract-isocity-sprite.mjs  extract-sprite.mjs  fix-coaster-borders.mjs  supabase-max-city-size.sql
scripts/sprite-output/: extraction-summary.json
src/app/: globals.css  layout.tsx  page.tsx
src/app/coaster/: page.tsx
src/app/coasterwasm/: page.tsx
src/app/opengraph-image/: route.ts
src/components/: Game.tsx
src/components/coaster/: CoasterCanvas.tsx  (+14 more)
src/context/: CoasterContext.tsx  CoasterMultiplayerContext.tsx  GameContext.tsx  MultiplayerContext.tsx
src/core/: index.ts
src/games/: index.ts
src/hooks/: useCoasterMultiplayerSync.ts  useMultiplayerSync.ts  useTipSystem.ts
src/lib/: coasterPathfinding.ts  coasterQueue.ts  coasterResearch.ts  coasterSimulation.ts  renderConfig.ts  saveWorker.ts  saveWorkerManager.ts  simulation.ts
src/resources/: example_state.json  example_state_2.json
src/types/: game.ts
wasm/pkg/: isocoaster_wasm_bg.wasm
wasm/src/: lib.rs
(+146 files in other folders)
