[package]
name = "iso-games-desktop"
version = "1.0.0"
description = "ISO Games Desktop - Play ISO City and ISO Coaster"
authors = ["ISO Games"]
edition = "2021"

[lib]
name = "iso_games_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "iso-games-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
